@@ -41,6 +41,12 @@ VALUES \
      , :updated_by \
      )
 
+series.add_comment = \
+UPDATE series \
+   SET comment = :comment \
+ WHERE id = :series_id \
+   AND comment IS NULL
+
 series.mark_as_modified = \
 UPDATE series \
    SET updated_at = :updated_at \
